Opened 13 years ago
Closed 13 years ago
#4742 closed bug (fixed)
Could not open "BeSmsPlus" (Missing symbol: _ReservedJoystick2__9BJoystick)
Reported by: | olaf | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Game Kit | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
I was told to report this error as it is a binary incompatibility. I tried to run the Sega Master System emulator BeSmsPlus (under the R1A1 build) and received this error...
Could not open "BeSmsPlus" (Missing symbol: _ReservedJoystick29BJoystick)
You can download it here: http://www.zophar.net/beos/sms-gg/besmsplus.html
(I'll also attach it)
Attachments (2)
Change History (8)
by , 13 years ago
comment:1 by , 13 years ago
Owner: | changed from | to
---|
Those appear to have been removed by modeenf in 27171, which they should not have been.
comment:2 by , 13 years ago
Attached is the fix for this problem. I can't yet commit since I didn't manage to switch repository yet (in progress).
by , 13 years ago
Attachment: | patch.diff added |
---|
comment:4 by , 13 years ago
You have to apply the patch before compiling a new image. If you don't compile your own images from source code, you'll have to wait until someone applies the patch and a new image is released. These kind of questions are better posted on the general mailing list or the web forums, BTW.
comment:5 by , 13 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:6 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Applied in hrev33520. Thanks Stefano!
BeSmsPlus