* Applied (cleaned up) patch by Stefano to fix bug #4742. * Note while this fixed running BeOS apps using BJoystick, it breaks all apps   (and SDL) that have been compiled for Haiku R1/alpha1. It's really bad that   r27171 went through unnoticed. We should really try harder next time (and   try to get the ABI change detection script working in an automated way).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33520 a95241bf-73f2-0310-859d-f6bbb57e9c96